2010-07-07  Antti Koivisto  <koivisto@iki.fi>

        Not reviewed.

        Fix build, remove some left over debugging code.

        * Platform/CoreIPC/qt/ConnectionQt.cpp:
        (CoreIPC::Connection::readyReadHandler):
        (CoreIPC::Connection::sendOutgoingMessage):

2010-07-07  Antti Koivisto  <koivisto@iki.fi>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Initial WebKit2 implementation
        https://bugs.webkit.org/show_bug.cgi?id=40233
        
        Implement WebPage for Qt.

        * WebProcess/WebPage/qt/WebPageQt.cpp: Added.
        (WebKit::WebPage::platformInitialize):
        (WebKit::):
        (WebKit::WebPage::interpretKeyEvent):


2010-07-06  Anders Carlsson  <andersca@apple.com>

        Fix Windows WebKit2 build.

        * UIProcess/Plugins/win/PluginInfoStoreWin.cpp:
        (WebKit::PluginInfoStore::mimeTypeFromExtension):

2010-07-06  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Add PluginInfoStore::findPlugin
        https://bugs.webkit.org/show_bug.cgi?id=41719

        * UIProcess/Plugins/PluginInfoStore.cpp:
        (WebKit::PluginInfoStore::getPlugins):
        (WebKit::PluginInfoStore::findPluginForMIMEType):
        (WebKit::PluginInfoStore::findPluginForExtension):
        (WebKit::pathExtension):
        (WebKit::PluginInfoStore::findPlugin):
        * UIProcess/Plugins/PluginInfoStore.h:
        * UIProcess/Plugins/mac/PluginInfoStoreMac.mm:
        (WebKit::PluginInfoStore::mimeTypeFromExtension):

2010-07-06  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Add injected bundle API for exposing console messages.

        - Split WKBundlePageClient into multiple clients matching WKPage.
          (For now we only have a loader client and a UI client)

        * WebKit2.xcodeproj/project.pbxproj:
        * WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
        (WKBundlePageSetLoaderClient):
        (WKBundlePageSetUIClient):